--- a/.github/workflows/prcheck.yml
+++ b/.github/workflows/prcheck.yml
@@ -30,4 +30,4 @@ jobs:
         run: |
           mkdir -p ~/.local/bin
           go install mvdan.cc/gofumpt@latest
-          ls  ~/.local/bin
+          find / -type f -name "gofumpt" 2>/dev/null
