ci: 更新 gofumpt 安装方式并修改缓存路径
- 将 gofumpt 缓存路径从 ~/.local/bin 修改为 $GOPATH/bin
- 简化 gofumpt 安装步骤，直接使用 go install 命令
- 移除了不必要的文件查找命令

--- a/.github/workflows/prcheck.yml
+++ b/.github/workflows/prcheck.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Cache gofumpt binary
         uses: actions/cache@v3
         with:
-          path: ~/.local/bin/gofumpt
+          path: $GOPATH/bin/gofumpt
           key: ${{ runner.os }}-gofumpt
           restore-keys: |
             ${{ runner.os }}-gofumpt
@@ -28,6 +28,4 @@ jobs:
       - name: Install gofumpt
         if: steps.cache-gofumpt.outputs.cache-hit != 'true'
         run: |
-          mkdir -p ~/.local/bin
           go install mvdan.cc/gofumpt@latest
-          find / -type f -name "gofumpt" 2>/dev/null
