ci(prcheck): 优化 gofumpt 二进制文件缓存步骤
- 为 Cache gofumpt binary 步骤添加 id
- 添加打印 GOPATH 步骤
- 添加检查缓存是否命中的步骤
- 添加验证 gofumpt 是否安装成功的步骤

--- a/.github/workflows/prcheck.yml
+++ b/.github/workflows/prcheck.yml
@@ -1,11 +1,11 @@
 name: Pull Request Check
 
-on: [push,pull_request]
+on: [push, pull_request]
 
 jobs:
   prcheck:
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -17,6 +17,7 @@ jobs:
 
       # 读取 gofumpt 二进制文件缓存
       - name: Cache gofumpt binary
+        id: cache-gofumpt
         uses: actions/cache@v3
         with:
           path: $GOPATH/bin/gofumpt
@@ -29,3 +30,20 @@ jobs:
         if: steps.cache-gofumpt.outputs.cache-hit != 'true'
         run: |
           go install mvdan.cc/gofumpt@latest
+
+      # 打印 GOPATH
+      - name: Print GOPATH
+        run: echo $GOPATH
+
+      # 检查缓存是否命中
+      - name: Check cache hit
+        run: echo "Cache hit: ${{ steps.cache-gofumpt.outputs.cache-hit }}"
+
+      # 验证 gofumpt 是否安装成功
+      - name: Verify gofumpt installation
+        run: |
+          if [ -f $GOPATH/bin/gofumpt ]; then
+            echo "gofumpt is installed at $GOPATH/bin/gofumpt"
+          else
+            echo "gofumpt is not installed"
+          fi
