--- a/.github/workflows/prcheck.yml
+++ b/.github/workflows/prcheck.yml
@@ -1,11 +1,11 @@
 name: Pull Request Check
 
-on: [push,pull_request]
+on: [push, pull_request]
 
 jobs:
   prcheck:
     runs-on: ubuntu-latest
-    
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -17,9 +17,10 @@ jobs:
 
       # 读取 gofumpt 二进制文件缓存
       - name: Cache gofumpt binary
+        id: cache-gofumpt  # 添加 id 字段
         uses: actions/cache@v3
         with:
-          path: $GOPATH/bin/gofumpt
+          path: ${{ $GOPATH }}/bin/gofumpt
           key: ${{ runner.os }}-gofumpt
           restore-keys: |
             ${{ runner.os }}-gofumpt
@@ -30,7 +31,7 @@ jobs:
         run: |
           go install mvdan.cc/gofumpt@latest
 
-        # 打印 GOPATH
+      # 打印 GOPATH
       - name: Print GOPATH
         run: echo $GOPATH
 
