ci: 修复 GoFumpt 缓存路径引用
- 将 $GOPATH 替换为 ${{ env.$GOPATH }}，以正确引用环境变量
- 添加 id 字段以标识缓存步骤

--- a/.github/workflows/prcheck.yml
+++ b/.github/workflows/prcheck.yml
@@ -20,7 +20,7 @@ jobs:
         id: cache-gofumpt  # 添加 id 字段
         uses: actions/cache@v3
         with:
-          path: ${{ $GOPATH }}/bin/gofumpt
+          path: ${{ env.$GOPATH }}/bin/gofumpt
           key: ${{ runner.os }}-gofumpt
           restore-keys: |
             ${{ runner.os }}-gofumpt
