ci: 修改环境变量 BIN 的路径
- 将环境变量 BIN 的路径从 $HOME/.local/bin 改为 /usr/local/bin
- 此修改统一了环境变量设置，确保一致性

--- a/.github/workflows/prcheck.yml
+++ b/.github/workflows/prcheck.yml
@@ -17,7 +17,7 @@ jobs:
 
       - name: Set environment variable
         run: |
-          echo "BIN=$HOME/.local/bin" >> $GITHUB_ENV
+          echo "BIN=/usr/local/bin" >> $GITHUB_ENV
 
       # 读取 gofumpt 二进制文件缓存
       - name: Cache gofumpt binary
