ci: 修复 PR 检查工作流程中的 gofumpt 缓存
- 将 $BIN 替换为 ${{ env.BIN }}，以确保正确使用环境变量
- 更新 gofumpt 安装命令，使用动态路径

--- a/.github/workflows/prcheck.yml
+++ b/.github/workflows/prcheck.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Cache gofumpt binary
         uses: actions/cache@v3
         with:
-          path: $BIN/gofumpt
+          path: ${{ env.BIN }}/gofumpt
           key: ${{ runner.os }}-gofumpt
           restore-keys: |
             ${{ runner.os }}-gofumpt
@@ -32,6 +32,6 @@ jobs:
       - name: Install gofumpt
         if: steps.cache-gofumpt.outputs.cache-hit != 'true'
         run: |
-          mkdir -p $BIN
-          GOBIN=$BIN go install mvdan.cc/gofumpt@latest
+          mkdir -p ${{ env.BIN }}
+          GOBIN=${{ env.BIN }} go install mvdan.cc/gofumpt@latest
           
